--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 }
 
 plugins {
+    id "com.modrinth.minotaur" version "2.+"
     id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
@@ -86,7 +87,6 @@ repositories {
         name = "Zeitheron Maven"
         url = "https://maven.zeith.org"
     }
-    maven { url "https://maven.shedaniel.me" }
     maven { setUrl("https://oss.sonatype.org/content/repositories/public/") }
     flatDir { dirs "libraries/${config.mc_version}/all" }
     flatDir { dirs "libraries/${config.mc_version}/classpathOnly" }
@@ -103,11 +103,7 @@ dependencies {
     minecraft "net.minecraftforge:forge:${config.mc_version}-${config.forge_version}"
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
-
-    implementation fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:10.0.581")
-    // implementation fg.deobf("me.shedaniel:RoughlyEnoughItems-plugin-compatibilities-forge:9.1.530")
-
-    // implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:1.19.2-${config.shimmer_version}")
+    // implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:${config.mc_version}-${config.shimmer_version}")
 
     def libraries = new File(file("libraries"), "${config.mc_version}")
     if (!libraries.isDirectory()) libraries.mkdirs()
@@ -224,17 +220,132 @@ artifacts {
     archives srcJar
 }
 
+modrinth {
+    token = System.env.MODRINTH_TOKEN != null ? System.env.MODRINTH_TOKEN : "NONE"
+    projectId = config.modrinth_project as String
+    versionNumber = config.mod_version as String
+    versionType = config.release_type as String
+    uploadFile = jar
+    gameVersions = [config.mc_version as String]
+    dependencies {
+        def mods = (config.required_mods as String).split(";")
+        if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+            for (final def one in mods) {
+                if (one.isBlank()) continue
+                if (one.startsWith("@")) {
+                    def pars = one.substring(1).split(":", 2)
+                    if (pars[0].equalsIgnoreCase("m")) {
+                        required.project pars[1].trim()
+                    }
+                } else
+                    required.project one.trim()
+            }
+
+        mods = (config.optional_mods as String).split(";")
+        if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+            for (final def one in mods) {
+                if (one.isBlank()) continue
+                if (one.startsWith("@")) {
+                    def pars = one.substring(1).split(":", 2)
+                    if (pars[0].equalsIgnoreCase("m")) {
+                        optional.project pars[1].trim()
+                    }
+                } else
+                    optional.project one.trim()
+            }
+
+        mods = (config.incompatible_mods as String).split(";")
+        if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+            for (final def one in mods) {
+                if (one.isBlank()) continue
+                if (one.startsWith("@")) {
+                    def pars = one.substring(1).split(":", 2)
+                    if (pars[0].equalsIgnoreCase("m")) {
+                        incompatible.project pars[1].trim()
+                    }
+                } else
+                    incompatible.project one.trim()
+            }
+
+        mods = (config.embedded_mods as String).split(";")
+        if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+            for (final def one in mods) {
+                if (one.isBlank()) continue
+                if (one.startsWith("@")) {
+                    def pars = one.substring(1).split(":", 2)
+                    if (pars[0].equalsIgnoreCase("m")) {
+                        embedded.project pars[1].trim()
+                    }
+                } else
+                    embedded.project one.trim()
+            }
+    }
+}
+
 curseforge {
-    apiKey = System.env.CURSEFORGE_API_KEY
+    apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : "NONE"
     project {
-        id = "${config.cf_project}"
+        id = config.cf_project as String
         changelogType = 'html'
         changelog = ""
-        releaseType = "${config.release_type}"
-        addGameVersion "${config.mc_version}"
+        releaseType = config.release_type as String
+        addGameVersion config.mc_version as String
         addGameVersion "Forge"
         mainArtifact(jar) {
             displayName = "[${config.mc_version}] ${config.mod_name} - ${config.mod_version}"
+        }
+        relations {
+            def mods = (config.required_mods as String).split(";")
+            if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+                for (final def one in mods) {
+                    if (one.isBlank()) continue
+                    if (one.startsWith("@")) {
+                        def pars = one.substring(1).split(":", 2)
+                        if (pars[0].equalsIgnoreCase("c")) {
+                            requiredDependency pars[1].trim()
+                        }
+                    } else
+                        requiredDependency one.trim()
+                }
+
+            mods = (config.optional_mods as String).split(";")
+            if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+                for (final def one in mods) {
+                    if (one.isBlank()) continue
+                    if (one.startsWith("@")) {
+                        def pars = one.substring(1).split(":", 2)
+                        if (pars[0].equalsIgnoreCase("c")) {
+                            optionalDependency pars[1].trim()
+                        }
+                    } else
+                        optionalDependency one.trim()
+                }
+
+            mods = (config.incompatible_mods as String).split(";")
+            if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+                for (final def one in mods) {
+                    if (one.isBlank()) continue
+                    if (one.startsWith("@")) {
+                        def pars = one.substring(1).split(":", 2)
+                        if (pars[0].equalsIgnoreCase("c")) {
+                            incompatible pars[1].trim()
+                        }
+                    } else
+                        incompatible one.trim()
+                }
+
+            mods = (config.embedded_mods as String).split(";")
+            if (mods.length > 0 && (mods.length > 1 || !mods[0].isEmpty()))
+                for (final def one in mods) {
+                    if (one.isBlank()) continue
+                    if (one.startsWith("@")) {
+                        def pars = one.substring(1).split(":", 2)
+                        if (pars[0].equalsIgnoreCase("c")) {
+                            embeddedLibrary pars[1].trim()
+                        }
+                    } else
+                        embeddedLibrary one.trim()
+                }
         }
     }
 }
@@ -262,8 +373,18 @@ publish.dependsOn('reobfJar')
 
 build.dependsOn signJar
 
+tasks.register('buildAndUploadMod') {
+    group = "upload"
+    dependsOn "curseforge${config.cf_project}", 'modrinth'
+
+    doLast {
+        println "Upload complete."
+    }
+}
+
 afterEvaluate {
     tasks["curseforge${config.cf_project}"].dependsOn.add(publish)
+    tasks["modrinth"].dependsOn.add(publish)
 }
 
 publishing {
