[1.19.3] Removed unused buildscript code, update updateJSON field.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,12 +1,12 @@
 modLoader = "javafml"
 loaderVersion = "[44,)"
-issueTrackerURL = "https://gitlab.com/DragonForge/HammerLib/issues"
+issueTrackerURL = "https://github.com/dragon-forge/HammerLib/issues"
 license = "All rights reserved"
 [[mods]]
 modId = "hammerlib"
 version = "${file.jarVersion}"
 displayName = "HammerLib"
-updateJSONURL = "http://h.zeith.org/api/fmluc/247401"
+updateJSONURL="https://api.modrinth.com/updates/PlkSuVtM/forge_updates.json"
 displayURL = "http://h.zeith.org/api/fmlhp/247401"
 logoFile = "logo.png"
 authors = "Zeitheron"
