--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="All rights reserved"
 modId="hammerlib"
 version="${file.jarVersion}"
 displayName="HammerLib"
-updateJSONURL="http://h.zeith.org/api/fmluc/247401"
+updateJSONURL="https://api.modrinth.com/updates/PlkSuVtM/forge_updates.json"
 displayURL="http://h.zeith.org/api/fmlhp/247401"
 logoFile="logo.png" #optional
 authors="Zeitheron" #optional
