--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId = "${mod_id}"
 version = "${mod_version}"
 displayName = "${mod_name}"
 updateJSONURL = "https://api.modrinth.com/updates/${modrinth_project}/forge_updates.json"
-displayURL = "http://h.zeith.org/api/fmlhp/247401"
+displayURL = "https://legacy.curseforge.com/minecraft/mc-mods/hammer-lib"
 logoFile = "logo.png"
 authors = "${mod_authors}"
 
