--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ dependencies {
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
-    implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:1.20-${config.shimmer_version}")
+    compileOnly fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:1.20-${config.shimmer_version}")
 
     def libraries = new File(file("libraries"), "${config.mc_version}")
     if (!libraries.isDirectory()) libraries.mkdirs()
