--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-		maven {
+        maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
@@ -17,7 +17,7 @@ buildscript {
 
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.4.0'
-	id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.56'
+    id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.56'
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -41,23 +41,23 @@ compileJava {
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
     maven {
         name = "thiakil"
         url = "http://maven.thiakil.com"
     }
     maven {
         name = "jei"
-        url =  "http://dvs1.progwml6.com/files/maven"
+        url = "http://dvs1.progwml6.com/files/maven"
     }
-	maven {
-		name = "HWYLA TEMP"
-		url = "https://raw.github.com/TehNut/temporary-maven-thing/master/maven"
-	}
-	maven {
-		name "TheOneProbe"
-		url "http://maven.tterrag.com/"
-	}
+    maven {
+        name = "HWYLA TEMP"
+        url = "https://raw.github.com/TehNut/temporary-maven-thing/master/maven"
+    }
+    maven {
+        name "TheOneProbe"
+        url "http://maven.tterrag.com/"
+    }
     maven {
         name = "CoFH Maven"
         url = "http://maven.covers1624.net"
@@ -65,10 +65,10 @@ repositories {
 }
 
 dependencies {
-	deobfCompile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2"
-	deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.22-13"
+    deobfCompile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2"
+    deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.22-13"
     deobfCompile "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}:api"
-	deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
+    deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
     runtime "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}"
 }
 
@@ -78,71 +78,92 @@ minecraft {
     mappings = "${config.mappings}"
     makeObfSourceJar = false
     replace '@VERSION@', "${config.mod_version}"
-	replace '@FINGERPRINT@', project.findProperty('signSHA1')
+    replace '@FINGERPRINT@', project.findProperty('signSHA1')
 }
 
 processResources
-{
-    inputs.property "version", project.version
-    inputs.property "mcversion", config.minecraft_version
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-		include 'pack.mcmeta'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-		exclude 'pack.mcmeta'
-    }
-	rename "hc_at.cfg", "META-INF/hc_at.cfg"
-}
+        {
+            inputs.property "version", project.version
+            inputs.property "mcversion", config.minecraft_version
+            from(sourceSets.main.resources.srcDirs) {
+                include 'mcmod.info'
+                include 'pack.mcmeta'
+                expand 'version': project.version, 'mcversion': project.minecraft.version
+            }
+            from(sourceSets.main.resources.srcDirs) {
+                exclude 'mcmod.info'
+                exclude 'pack.mcmeta'
+            }
+            rename "hc_at.cfg", "META-INF/hc_at.cfg"
+        }
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
     classifier = 'deobf'
     manifest {
         attributes 'FMLCorePlugin': 'com.zeitheron.hammercore.asm.HCASM'
-		attributes 'FMLCorePluginContainsFMLMod': 'false'
-		attributes 'FMLAT': 'hc_at.cfg'
+        attributes 'FMLCorePluginContainsFMLMod': 'false'
+        attributes 'FMLAT': 'hc_at.cfg'
+        attributes "Specification-Title": "HammerLib"
+        attributes "Specification-Vendor": "Zeitheron"
+        attributes "Specification-Version": "1"
+        attributes "Implementation-Title": "HammerLib"
+        attributes "Implementation-Version": config.mod_version
+        attributes "Implementation-Vendor": "Zeitheron"
+        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     }
 }
 
 task srcJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
     classifier = 'sources'
-	manifest {
+    manifest {
         attributes 'FMLCorePlugin': 'com.zeitheron.hammercore.asm.HCASM'
-		attributes 'FMLCorePluginContainsFMLMod': 'false'
-		attributes 'FMLAT': 'hc_at.cfg'
+        attributes 'FMLCorePluginContainsFMLMod': 'false'
+        attributes 'FMLAT': 'hc_at.cfg'
+        attributes "Specification-Title": "HammerLib"
+        attributes "Specification-Vendor": "Zeitheron"
+        attributes "Specification-Version": "1"
+        attributes "Implementation-Title": "HammerLib"
+        attributes "Implementation-Version": config.mod_version
+        attributes "Implementation-Vendor": "Zeitheron"
+        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     }
 }
 
 jar {
-	manifest {
+    manifest {
         attributes 'FMLCorePlugin': 'com.zeitheron.hammercore.asm.HCASM'
-		attributes 'FMLCorePluginContainsFMLMod': 'false'
-		attributes 'FMLAT': 'hc_at.cfg'
+        attributes 'FMLCorePluginContainsFMLMod': 'false'
+        attributes 'FMLAT': 'hc_at.cfg'
+        attributes "Specification-Title": "HammerLib"
+        attributes "Specification-Vendor": "Zeitheron"
+        attributes "Specification-Version": "1"
+        attributes "Implementation-Title": "HammerLib"
+        attributes "Implementation-Version": config.mod_version
+        attributes "Implementation-Vendor": "Zeitheron"
+        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     }
 }
 
 artifacts {
     archives deobfJar
-	archives srcJar
+    archives srcJar
 }
 
 curseforge {
-	apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : '0'
-	project {
-		id = "${config.project_id}"
-		changelogType = 'html'
-		changelog = file('changelog.html')
-		releaseType = "${config.release_type}"
-		addGameVersion "${config.minecraft_version}"
-		addGameVersion "Forge"
-		mainArtifact(jar) {
-		  displayName = "[${config.minecraft_version}] ${config.mod_name} - ${config.mod_version}"
-		}
-	}
+    apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : '0'
+    project {
+        id = "${config.project_id}"
+        changelogType = 'html'
+        changelog = file('changelog.html')
+        releaseType = "${config.release_type}"
+        addGameVersion "${config.minecraft_version}"
+        addGameVersion "Forge"
+        mainArtifact(jar) {
+            displayName = "[${config.minecraft_version}] ${config.mod_name} - ${config.mod_version}"
+        }
+    }
 }
 
 task signJar(type: SignJar, dependsOn: reobfJar) {
@@ -185,7 +206,7 @@ task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
     file = new File("changelog.html")
     untaggedName = "Version ${project.version}"
     fromCommit = config.start_git_commit
-    toRef =  "HEAD"
+    toRef = "HEAD"
     gitHubIssuePattern = "nonada123";
     templateContent = """
 {{#tags}}
@@ -206,8 +227,8 @@ build.dependsOn signSrcJar
 tasks.build.dependsOn makeChangelog
 
 afterEvaluate {
-	tasks["curseforge${config.project_id}"].dependsOn.add(signJar)
-	tasks["curseforge${config.project_id}"].dependsOn.add(signDeobfJar)
-	tasks["curseforge${config.project_id}"].dependsOn.add(signSrcJar)
-	tasks["curseforge${config.project_id}"].dependsOn.add(makeChangelog)
+    tasks["curseforge${config.project_id}"].dependsOn.add(signJar)
+    tasks["curseforge${config.project_id}"].dependsOn.add(signDeobfJar)
+    tasks["curseforge${config.project_id}"].dependsOn.add(signSrcJar)
+    tasks["curseforge${config.project_id}"].dependsOn.add(makeChangelog)
 }
