[1.12.2] Added NBT serialization.

--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -72,6 +72,8 @@ public net.minecraft.client.multiplayer.PlayerControllerMP field_78770_f # curBl
 public net.minecraft.client.network.NetworkPlayerInfo field_178863_g # skinType
 public net.minecraft.client.network.NetworkPlayerInfo field_187107_a # playerTextures
 
+public net.minecraft.nbt.NBTTagLongArray field_193587_b # data
+
 public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
 
 public-f net.minecraft.item.ItemStack field_151002_e # item
