[1.19.2] Safeguards for emission layer rendering; Fix PropertyDispatcher sync errors;

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[43,)"
-issueTrackerURL="https://gitlab.com/DragonForge/HammerLib/issues"
+issueTrackerURL="https://github.com/Dragon-Forge/HammerLib/issues"
 license="All rights reserved"
 [[mods]]
 modId="hammerlib"
