--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,11 @@ import java.nio.file.StandardOpenOption
 dependencies {
     minecraft "net.minecraftforge:forge:${config.mc_version}-${config.forge_version}"
 
+    ////// UTILITY STUFF //////
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    ///////////////////////////
+
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
     implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:${config.mc_version}-${config.shimmer_version}")
 
