--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,4 @@ public net.minecraft.world.item.crafting.RecipeManager *
 public net.minecraft.world.item.alchemy.PotionBrewing addMix(Lnet/minecraft/world/item/alchemy/Potion;Lnet/minecraft/world/item/Item;Lnet/minecraft/world/item/alchemy/Potion;)V
 public net.minecraft.client.renderer.texture.HttpTexture *
 public net.minecraft.world.item.crafting.RecipeManager byType(Lnet/minecraft/world/item/crafting/RecipeType;)Ljava/util/Map;
+public net.minecraft.world.item.crafting.ShapedRecipe *
