--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -21,14 +21,14 @@ file="META-INF/accesstransformer.cfg"
 
 [[dependencies.${mod_id}]]
 modId = "neoforge"
-mandatory = true
+type = 'required'
 versionRange = "${forge_version_range}"
 ordering = "NONE" # NONE/BEFORE/AFTER
 side = "BOTH"
 
 [[dependencies.${mod_id}]]
 modId = "minecraft"
-mandatory = true
+type = 'required'
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
 side = "BOTH"
